deploy/k8/hs-pageserv.yaml
apiVersion: v1
kind: Service
metadata:
  name: hs-pageserv
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hs-pageserv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hs-pageserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hs-pageserv
  template:
    metadata:
      labels:
        app: hs-pageserv
    spec:
      containers:
      - name: hs-pageserv
        image: YOUR_CONTAINER_IMAGE_HERE
        ports:
        - containerPort: 3000
