deploy/k8/hs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.hypnospacemap.ca
    - hypnospacemap.ca
    - pageserv.hypnospacemap.ca
    - captureserv.hypnospacemap.ca
    secretName: hs-tls
  defaultBackend:
    service:
      name: hs-web
      port:
        number: 80
  rules:
  - host: "www.hypnospacemap.ca"
    http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: hs-web
            port:
              number: 80
  - host: "hypnospacemap.ca"
    http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
            service:
              name: hs-web
              port:
                number: 80
  - host: "pageserv.hypnospacemap.ca"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hs-pageserv
            port:
              number: 80
  - host: "captureserv.hypnospacemap.ca"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hs-captureserv
            port:
              number: 80
